Reorganized structure, moved images to their own directory

--- a/Tab Manager/popup.css
+++ b/Tab Manager/popup.css
@@ -64,7 +64,7 @@ body{
 	float:left;
 	margin-left:2px;
 	margin-bottom:2px;
-	background-image:url(random.png);
+	background-image:url(images/random.png);
 }
 .tab.full{
 	width:340px;
@@ -85,28 +85,28 @@ body{
 	margin-left:0px;
 }
 .add{
-	background-image:url(new.png);
+	background-image:url(images/new.png);
 }
 .close{
-	background-image:url(close.png);
+	background-image:url(images/close.png);
 }
 .new{
-	background-image:url(new.png);
+	background-image:url(images/new.png);
 }
 .trash{
-	background-image:url(trash.png);
+	background-image:url(images/trash.png);
 }
 .blocks{
-	background-image:url(block.png);
+	background-image:url(images/block.png);
 }
 .horizontal{
-	background-image:url(horizontal.png);
+	background-image:url(images/horizontal.png);
 }
 .vertical{
-	background-image:url(vertical.png);
+	background-image:url(images/vertical.png);
 }
 .pin{
-	background-image:url(pin.png);
+	background-image:url(images/pin.png);
 }
 .tab.left > .limiter, .tab.right > .limiter{
 	width:2px;
